# CodeLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  index.py  pyproject.toml  run_eval.py
data/: README.md
eval/: run_eval.py
src/: config.py  embedder.py  indexer.py  llm.py  metrics.py  parser.py  parser_java.py  searcher.py
