[project]
name = "codelens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
]
